Prevents line breaks in salaries with currency

--- a/components/dashboard/components/base-comment.module.css
+++ b/components/dashboard/components/base-comment.module.css
@@ -4,3 +4,7 @@
 
   text-align: center;
 }
+
+.strong {
+  white-space: nowrap;
+}
